--- a/sass/components/toggles.scss
+++ b/sass/components/toggles.scss
@@ -1,38 +1,43 @@
-
 #language-switcher:checked ~ {
-  #language-modal {
-	display: flex;
-  }
+	#language-modal {
+		display: flex;
+	}
 }
 
-#low-contrast:checked ~ {
-  * {
-	filter: brightness(70%) contrast(90%) saturate(90%);
-  }
-
-  section {
-	#theme-low-contrast {
-	  display: block;
+#low-contrast {
+	&:not(:checked) ~ section {
+		#theme-low-contrast {
+			display: none;
+		}
 	}
+	&:checked ~ {
+		* {
+			filter: brightness(70%) contrast(90%) saturate(90%);
+		}
+		section {
+			#theme-low-contrast {
+				display: block;
+			}
 
-	#theme-normal-contrast {
-	  display: none;
+			#theme-normal-contrast {
+				display: none;
+			}
+		}
 	}
-  }
 }
 
 #toggle-navbar:checked ~ {
-  section .navbar-menu {
-	display: block;
-  }
+	section .navbar-menu {
+		display: block;
+	}
 
-  nav .navbar-menu {
-	display: block;
-  }
+	nav .navbar-menu {
+		display: block;
+	}
 }
 
 #toggle-sidebar:checked ~ {
-  div .sidebar {
-	display: block !important;
-  }
+	div .sidebar {
+		display: block !important;
+	}
 }
